<resources>
    <string name="app_name">Github Browser</string>
    <string name="add">add</string>
    <string name="track_your_favourite_repo">Track your favourite repo</string>
    <string name="add_now">ADD NOW</string>
    <string name="repository_name">Repository Name</string>
    <string name="description_of_the_repository">Description of the Repository</string>
    <string name="add_repo">Add Repo</string>
    <string name="owner_organization">Owner / Organization</string>
    <string name="repo_name">Repo Name</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="branches">Branches</string>
    <string name="issues_0">Issues(0)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="branch_name">Branch Name</string>
    <string name="issue_title">Issue Title</string>
    <string name="issue_creator">Issue Creator</string>
    <string name="commits">Commits</string>
    <string name="date">Date</string>
    <string name="commit_id">Commit Id</string>
    <string name="commit_message">Commit Message</string>
    <string name="username">UserName</string>
</resources>