<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_edit_text">

        <TextView
            android:id="@+id/TVDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/TVCommitId"
            android:background="@drawable/bg_btn_add"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TVCommitId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_btn_commit"
            android:padding="10dp"
            android:text="@string/commit_id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TVCommitMssg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TVDate"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/commit_message"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/IVProfile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_profile"
            android:layout_below="@id/TVCommitMssg"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_toEndOf="@id/IVProfile"
            android:layout_below="@id/TVCommitMssg"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>